make the background image float behind - fixed

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -3,7 +3,8 @@
 #hero {
     background: url("../img/hero-bg-ds.png") top right no-repeat;
     background-size: cover;
-    scale: 1.25
+    scale: 1.25;
+    background-attachment: fixed;
 }
 
 /* PORTFOLIO */
